--- a/preamble.tex
+++ b/preamble.tex
@@ -33,7 +33,11 @@
 \newcommand{\cl}{\mathrm{CL}}
 \newcommand{\findAbs}{\mathit{ComputeAbstraction}}
 \newcommand{\ball}{\Omega}
+\newcommand{\obs}{\mathit{obs}}
+\newcommand{\col}{\mathit{col}}
 \def\reals{\mathbb{R}}
+\def\ints{\mathbb{Z}}
+
 
 % environments
 \newtheorem{subproblem}{Subproblem}
